# Picking_Go2

./: README.md  make  ros_master  ros_noetic.md
devel/: .catkin  _setup_util.py  setup.sh
devel/lib/go2_controller/: controller.py  talker.py
devel/lib/pkgconfig/: go2_controller.pc  unitree_legged_msgs.pc
devel/share/gennodejs/ros/unitree_legged_msgs/msg/: _index.js
devel/share/go2_controller/cmake/: go2_controller-msg-paths.cmake  go2_controllerConfig.cmake
devel/share/roseus/ros/go2_controller/: manifest.l
devel/share/roseus/ros/unitree_legged_msgs/: manifest.l
devel/share/unitree_legged_msgs/cmake/: unitree_legged_msgs-msg-extras.cmake  unitree_legged_msgs-msg-paths.cmake  unitree_legged_msgsConfig.cmake
src/arm_bus_servo/: BusServo_Move.py
src/armpi_fpv/urdf/: armpi_fpv.urdf
src/controller/: CMakeLists.txt  package.xml
src/controller/Kinematics/: ik_transform.py  inverse_kinematics.py
src/controller/arm_bus_pak/: Board.py  BusServoCmd.py  BusServo_Move.py  Dadacallback.py
src/controller/armfpv_sdk/: armfpv.md
src/controller/armfpv_sdk/ArmIK/: ArmMoveIK.py
src/controller/armfpv_sdk/HiwonderSDK/: Board.py  BusServoCmd.py
src/controller/go2/: test.py
src/controller/launch/: controller.launch
src/controller/scripts/: arm_controller.py  camera.py  camera_calibration.py  camera_realsense.py  jaka_controller.py  joystick.py  manage.py  rois_to_point.py  test.py  unitree_go2.py  yolov5_pred.py
src/controller/yolov5_pak/: best.pt
src/controller/yolov5_pak/utils/: jaka_def.py
src/go2_controller/: CMakeLists.txt  package.xml
src/go2_controller/launch/: go2_controller.launch
src/go2_controller/scripts/: controller.py  x_box.py
src/go2_controller/src/: ctrl.cpp
src/hiwonder_servo_controllers/: CMakeLists.txt
src/hiwonder_servo_controllers/config/: hiwonder_servo_controller.yaml
src/hiwonder_servo_controllers/scripts/: test_msg.py
src/hiwonder_servo_driver/src/hiwonder_servo_driver/: hiwonder_servo_io.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/action/: Go2.action
src/interfaces/msg/: Go2Target.msg  Targets.msg
src/interfaces/srv/: ArmCtrl.srv  Go2.srv  RoiToPoint.srv
src/interfaces_msgs/: CMakeLists.txt  package.xml
src/interfaces_msgs/msg/: Images.msg  Rois.msg
src/moveit/: .setup_assistant  package.xml
src/moveit/config/: armpi_fpv.srdf  fake_controllers.yaml  joint_limits.yaml
src/moveit/launch/: gazebo.launch  move_group.launch  planning_context.launch  sensor_manager.launch.xml
src/realsense2_camera/launch/: rs_camera.launch
src/unitree_legged_msgs/msg/: HighCmd.msg
